[package]
name = "cli"
version = "0.1.0"
authors = ["Jon Latané <jon@beatscratch.io>", "Oleg Gashev <oleg@gashev.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
grpcio = "0.10.2"
protobuf = { version = "3.0.3", features = ["with-bytes"] }
clap = "2.33"