[package]
name = "server"
version = "0.1.0"
authors = ["Jon Latané <jon@beatscratch.io>", "Oleg Gashev <oleg@gashev.net>"]
edition = "2021"

[dependencies]
futures = "0.1"
grpcio = "0.10.2"
protobuf = { version = "3.0.3", features = ["with-bytes"] }
db = { path = "../db" }
diesel = { version = "1.4.8", features = ["postgres"] }